gke_config/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: revival-app
  template:
    metadata:
      labels:
        app: revival-app
    spec:
      containers:
        - name: revival-app
          image: gcr.io/revival-1/revival-app:latest
          ports:
            - containerPort: 4000
