gke_config/db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: revival-db
  template:
    metadata:
      labels:
        app: revival-db
    spec:
      containers:
        - name: revival-db
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-data
