gke_config/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-load-balancer
spec:
  selector:
    app: revival-app
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
