gke_config/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: revival-db
spec:
  selector:
    app: revival-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
